--- a/src/components/MainPanel/main.css
+++ b/src/components/MainPanel/main.css
@@ -1,22 +1,13 @@
 html,body{
-    /* height: -webkit-fill-available; */
     width: 100%;
-    /* margin: 20px; */
     padding: 10px;
     overflow: hidden;
-    
 }
 
 .height-100{
-    height: -webkit-fill-available;
-}
-
-.height-20{
-    height: 20%;
-}
-
-.height-80{
-    height: 80%;
+  height: -webkit-fill-available;
+  height: -moz-available;
+  height: stretch;
 }
 
 .vertical-scroll{
